cabal-version: 3.0
name:          ytxp-plutarch
version:       0.2.0
synopsis:
  Control scripts, types, and utilities for the YTxP architecture

author:        Peter Dragos, Koz Ross
maintainer:    edi@mlabs.city, peter@mlabs.city, koz@mlabs.city

flag dev
  description: Enable non-strict compilation for development
  manual:      True
  default:     False

-- Common stanzas

-- Peter, 2024-03-01: I'm disabling unused packages because for some
-- reason cabal is telling me that base is unused??
common common-language
  ghc-options:
    -Wall -Wcompat -fprint-explicit-foralls -fprint-explicit-kinds
    -fwarn-missing-import-lists -Weverything -Wno-unsafe
    -Wno-missing-safe-haskell-mode -Wno-implicit-prelude
    -Wno-missing-kind-signatures -Wno-all-missed-specializations
    -Wno-unused-packages -Wno-operator-whitespace

  if !flag(dev)
    ghc-options: -Werror

  build-depends:
    , plutarch
    , plutarch-ledger-api

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NoStarIsType
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns

  default-language:   Haskell2010
  mixins:
    base hiding (Prelude),
    pprelude (PPrelude as Prelude)

common common-test
  build-depends:
    , base
    , pprelude
    , tasty
    , ytxp-plutarch
    , ytxp-sdk

  ghc-options:   -O2 -threaded -rtsopts -with-rtsopts=-N

-- Libraries

-- Use the plutarch prelude + the base prelude
library pprelude
  default-language: Haskell2010
  build-depends:
    , base
    , plutarch
    , plutus-core  >=1.40.0.0 && <1.41

  exposed-modules:  PPrelude
  hs-source-dirs:   src

library
  import:          common-language
  build-depends:
    , base               ^>=4.18.1.0
    , bytestring
    , cardano-binary
    , containers
    , generics-sop
    , plutus-ledger-api
    , plutus-tx
    , ply-core
    , ply-plutarch
    , pprelude
    , regex
    , tasty
    , tasty-hunit
    , text
    , ytxp-sdk

  hs-source-dirs:  src
  exposed-modules:
    Cardano.TestUtils
    Cardano.YTxP
    Cardano.YTxP.Control.Yielding
    Cardano.YTxP.Control.Yielding.Helper
    Cardano.YTxP.Control.Yielding.Scripts
    Utils

-- Examples

library direct-offer-example
  import:           common-language
  default-language: Haskell2010
  hs-source-dirs:   examples/direct-offer
  build-depends:
    , base               ^>=4.18.1.0
    , generics-sop
    , plutus-ledger-api
    , pprelude

  exposed-modules:
    Cardano.YTxP.Example.Offer
    Cardano.YTxP.Example.Offer.Creating
    Cardano.YTxP.Example.Offer.Executing
    Cardano.YTxP.Example.Offer.PUtils
    Cardano.YTxP.Example.Offer.Reclaiming

library script-manager-example
  import:           common-language
  default-language: Haskell2010
  hs-source-dirs:   examples/script-manager/src
  build-depends:
    , base               ^>=4.18.1.0
    , generics-sop
    , plutus-ledger-api
    , pprelude

  exposed-modules:
    Cardano.YTxP.Example.PUtils
    Cardano.YTxP.Example.Script.Deploying
    Cardano.YTxP.Example.Script.Removing

-- Executables

executable ytxp
  import:         common-language
  main-is:        Main.hs
  build-depends:
    , base
    , optparse-applicative
    , plutus-ledger-api
    , plutus-tx
    , pprelude
    , ytxp-plutarch
    , ytxp-sdk

  hs-source-dirs: app

-- Tests

test-suite ytxp-lib-test
  import:         common-language, common-test
  type:           exitcode-stdio-1.0
  other-modules:
    Cardano.YTxP.Test.Control.Yielding.Scripts
    Cardano.YTxP.Test.Control.Yielding.Scripts.Attacks
    Cardano.YTxP.Test.Control.Yielding.Scripts.NominalCases
    Cardano.YTxP.Test.Control.Yielding.Scripts.ScriptsBuilders
    Cardano.YTxP.Test.Control.Yielding.Scripts.Utils
    Optics
    Utils

  main-is:        Main.hs
  build-depends:
    , lens
    , mtl
    , plutus-context-builder
    , plutus-ledger-api
    , plutus-tx
    , regex
    , tasty-hunit
    , text

  hs-source-dirs: test
