cabal-version: 3.0
name:          ytxp-plutarch
version:       0.1.0
synopsis:
  Control scripts, types, and utilities for the YTxP architecture

author:        Peter Dragos, Koz Ross
maintainer:    peter@mlabs.city, koz@mlabs.city

flag dev
  description: Enable non-strict compilation for development
  manual:      True
  default:     False

-- Common stanzas

-- Peter, 2024-03-01: I'm disabling unused packages because for some
-- reason cabal is telling me that base is unused??
common common-language
  ghc-options:
    -Wall -Wcompat -fprint-explicit-foralls -fprint-explicit-kinds
    -fwarn-missing-import-lists -Weverything -Wno-unsafe
    -Wno-missing-safe-haskell-mode -Wno-implicit-prelude
    -Wno-missing-kind-signatures -Wno-all-missed-specializations
    -Wno-unused-packages

  if !flag(dev)
    ghc-options: -Werror

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns
    UndecidableInstances

  default-language:   Haskell2010
  mixins:
    base hiding (Prelude),
    pprelude (PPrelude as Prelude)

common common-test
  build-depends:
    , base
    , pprelude
    , tasty
    , tasty-expected-failure
    , testlib
    , ytxp-plutarch

  ghc-options:   -O2 -threaded -rtsopts -with-rtsopts=-N

-- Libraries

-- Use the plutarch prelude + the base prelude
library pprelude
  default-language: Haskell2010
  build-depends:
    , aeson
    , base
    , bytestring
    , plutarch
    , plutus-core
    , prettyprinter
    , text
    , text-builder

  exposed-modules:  PPrelude
  hs-source-dirs:   src

library testlib
  import:          common-language
  build-depends:
    , aeson
    , base
    , plutus-ledger-api
    , pprelude
    , prettyprinter
    , QuickCheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , ytxp-plutarch

  hs-source-dirs:  testlib
  exposed-modules:
    Test.Laws
    Test.Unit
    Test.Utils

library
  import:          common-language
  build-depends:
    , aeson
    , base               ^>=4.18.1.0
    , generics-sop
    , plutarch
    , plutarch-extra
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , pprelude
    , prettyprinter
    , text

  hs-source-dirs:  src
  exposed-modules:
    Cardano.YTxP.Control.Parameters
    Cardano.YTxP.Control.ParametersInitial
    Cardano.YTxP.Control.Stubs
    Cardano.YTxP.Control.Vendored
    Cardano.YTxP.Control.Yielding
    Cardano.YTxP.Control.Yielding.MintingPolicy
    Cardano.YTxP.Control.Yielding.StakingValidator
    Cardano.YTxP.Control.Yielding.Validator
    Cardano.YTxP.Control.YieldList
    Cardano.YTxP.Control.YieldList.MintingPolicy
    Cardano.YTxP.Control.YieldList.Validator
    Utils

-- Executables

executable write-config
  import:         common-language
  main-is:        Main.hs
  build-depends:
    , aeson
    , aeson-pretty
    , base
    , bytestring
    , directory
    , pprelude
    , ytxp-plutarch

  hs-source-dirs: app/write-config

-- Tests

test-suite serialization
  import:         common-language, common-test
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , aeson
    , plutarch
    , QuickCheck
    , tasty-golden
    , tasty-quickcheck

  hs-source-dirs: test/serialization
